Allow client to register a registrant or verifier to a policy
