# src/handler/policies/registerAccountToPolicyHandler.ts
@@ -1,25 +1,31 @@
 import { GuardianMiddlewareRequest } from 'src/context/useGuardianContext'
-import response from 'src/response'
-import Config from 'src/config'
+import Response from 'src/response'
+import Config, { Role } from 'src/config'
 import { NextApiResponse } from 'next'
 
 async function RegisterAccountToPolicyHandler(
 	req: GuardianMiddlewareRequest,
 	res: NextApiResponse
 ) {
-	const { policyId } = req.query
+	const { policyId, roleType } = req.query
 	const { authorization } = req.headers
 	const { engine } = req.context
 
 	const accessToken = authorization?.split(' ')[1]
 
 	if (!accessToken) {
-		response.unauthorised(res, 'Missing access token')
-		return
+		return Response.unauthorised(res, 'Missing access token')
+	}
+
+	const role = (roleType as string)?.toUpperCase()
+	if (role !== Role.REGISTRANT && role !== Role.VERIFIER) {
+		return Response.unprocessibleEntity(
+			res,
+			"Invalid role type. Must be 'registrant' or 'verifier'"
+		)
 	}
 
 	const tag = Config.tags.chooseRole
-	const role = Config.roles.registrant
 
 	// TODO: Validate the request input
 	await engine.executeBlockViaTag(accessToken, policyId as string, tag, {
